@@ -71,12 +71,14 @@
                             --add-opens geci.examples/javax0.geci.tests.builder=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.cloner=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.configBuilder=ALL-UNNAMED
+                            --add-opens geci.examples/javax0.geci.tests.record=ALL-UNNAMED
+                            --add-opens geci.examples/javax0.geci.tests.accessor=ALL-UNNAMED
+                            --add-opens geci.examples/javax0.geci.tests.equals=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.test.tools.lexeger=ALL-UNNAMED
                             --add-opens geci.docugen/javax0.geci.docugen=ALL-UNNAMED
                             --add-exports geci.examples/javax0.geci.tutorials.simple=geci.core
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.tools
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
-                            --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                             --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                             --add-opens geci.examples/javax0.geci.jamal=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.jamal.util=ALL-UNNAMED
